--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,17 +2,20 @@
     "extends": "airbnb",
     "parser": "babel-eslint",
     "rules": {
-        "comma-dangle": 0,
-        "func-style": 0,
+        "arrow-parens": ["error", "as-needed", {
+            "requireForBlockBody": false
+        }],
+        "comma-dangle": "off",
+        "func-style": "off",
         "indent": "off",
         "jsx-quotes": ["error", "prefer-single"],
-        "no-use-before-define": 0,
+        "no-use-before-define": "off",
         "semi": "off",
 
-        "react/prefer-stateless-function": 0,
-        "react/jsx-filename-extension": 0,
-        "react/jsx-indent": 0,
+        "react/prefer-stateless-function": "off",
+        "react/jsx-filename-extension": "off",
+        "react/jsx-indent": "off",
         "react/jsx-indent-props": [2, 4],
-        "react/prop-types": 0
+        "react/prop-types": "off"
     }
 }
